Add react project

--- a/index.html
+++ b/index.html
@@ -173,6 +173,18 @@
           </figure>
         </div>
       </div>
+      <div class="row row-cols-1 row-cols-md-3 g-3 text-justify">
+        <div class="col">
+
+          <figure class="effect">
+
+            <a href="https://camilla223.github.io/pizza-menu/" target="_blank" rel="noopener noreferrer"><img src="./images/fastPizza.jpg" />
+              <figcaption>
+                <p>A simple React app that visualizes a pizza menu using reusable React components. This project demonstrates key React concepts like props deconstruction, conditional rendering, and component-based UI design.</p>
+              </figcaption>
+            </a>
+          </figure>
+        </div>
     </div>
   </section>
 
