update description and style

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
             <a href="https://anime-portal-ivory.vercel.app/" target="_blank" rel="noopener noreferrer"><img src="./images/animePortal.jpg" />
               <figcaption>
-                <p>A simple anime wiki using Jikan API, Express.js, Axios, HTML, and CSS to browse top-rated anime, search by genre, or find specific titles.</p>
+                <p>An anime wiki using Jikan API, Express.js, Axios, HTML, and CSS to browse top-rated anime, search by genre, or find specific titles.</p>
               </figcaption>
             </a>
           </figure>
@@ -165,7 +165,6 @@
 
             <a href="https://camilla223.github.io/flag_of_laos/" target="_blank" rel="noopener noreferrer"><img src="./images/flag.png" />
               <figcaption>
-
                 <p>Recreated the national flag of Laos using HTML and CSS, with a focus on applying CSS
                   positioning techniques for accurate layout and design.</p>
               </figcaption>
@@ -173,19 +172,17 @@
           </figure>
         </div>
       </div>
-      <div class="row row-cols-1 row-cols-md-3 g-3 text-justify">
+      <div class="row row-cols-1 row-cols-md-3 g-3 text-justify mt-2">
         <div class="col">
-
           <figure class="effect">
-
             <a href="https://camilla223.github.io/pizza-menu/" target="_blank" rel="noopener noreferrer"><img src="./images/fastPizza.jpg" />
               <figcaption>
-                <p>A simple React app that visualizes a pizza menu using reusable React components. This project demonstrates key React concepts like props deconstruction, conditional rendering, and component-based UI design.</p>
+                <p>A React app that visualizes a pizza menu showcasing key concepts like props deconstruction, conditional rendering, and component-based UI design.</p>
               </figcaption>
             </a>
           </figure>
         </div>
-    </div>
+      </div>
   </section>
 
   <!-- About me -->
