--- a/index.html
+++ b/index.html
@@ -182,6 +182,26 @@
             </a>
           </figure>
         </div>
+
+        <div class="col">
+          <figure class="effect">
+            <a href="https://camilla223.github.io/travel-list/" target="_blank" rel="noopener noreferrer"><img src="./images/travelList.jpg" />
+              <figcaption>
+                <p>A small React app showcasing interactive components, conditional rendering, state management with Lifting State Up, and derivative state concepts.</p>
+              </figcaption>
+            </a>
+          </figure>
+        </div>
+
+        <div class="col">
+          <figure class="effect">
+            <a href="https://camilla223.github.io/eat-n-split/" target="_blank" rel="noopener noreferrer"><img src="./images/eatSplit.jpg" />
+              <figcaption>
+                <p>A small React project for tracking shared expenses with friends. Demonstrates interactive components, conditional rendering, and state management using the Lifting State Up technique and derivative state concepts.</p>
+              </figcaption>
+            </a>
+          </figure>
+        </div>
       </div>
   </section>
 
