--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </div>
       </div>
       <div class="row row-cols-1 row-cols-md-3 g-3 text-justify mt-2">
-        <div class="col">
+        <!-- <div class="col">
           <figure class="effect">
             <a href="https://camilla223.github.io/pizza-menu/" target="_blank" rel="noopener noreferrer"><img src="./images/fastPizza.jpg" />
               <figcaption>
@@ -181,7 +181,7 @@
               </figcaption>
             </a>
           </figure>
-        </div>
+        </div> -->
 
         <div class="col">
           <figure class="effect">
@@ -202,6 +202,17 @@
             </a>
           </figure>
         </div>
+
+        <div class="col">
+          <figure class="effect">
+            <a href="https://camilla223.github.io/usepopcorn/" target="_blank" rel="noopener noreferrer"><img src="./images/usepopcorn.jpg" />
+              <figcaption>
+                <p>A React app for browsing movies via the OMDb API and managing a personal “Watched List” with custom ratings. Built using React hooks, controlled components, and lifted state for clean data flow. </p>
+              </figcaption>
+            </a>
+          </figure>
+        </div>
+
       </div>
   </section>
 
